<resources>
    <string name="app_name">SparkpoolViewer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- delete in future -->
    <string name="hello_first_fragment">test test test</string>

    <string name="path_pool_status">/v1/currency/stats</string>
    <string name="title_setting_fragment">Settings</string>
    <string name="labelServer">Server</string>
    <string name="default_serverAddress">https://www.sparkpool.com</string>
    <string name="hint_address">input sparkpool web api address</string>
    <string name="labelCurrency">Currency</string>
    <string name="text_eth">ETH</string>
    <string name="labelMiner">Miner</string>
    <string name="hintMiner">input your miner name in sparkpool</string>
    <string name="text_save">save</string>
    <string name="err_title_invalidSetting">Initialize Failed</string>
    <string name="err_message_invalidSetting">Check your settings.</string>
    <string name="text_ok">OK</string>
    <string name="name_preference">pref</string>
    <string name="text_poolstatus">PoolStatus</string>
    <string name="text_currency">Currency</string>
    <string name="text_poolhashrate">PoolHashrate</string>
    <string name="text_networkhashrate">NetworkHashrate</string>
    <string name="text_income24h">Income24H</string>
    <string name="text_difficulty">Difficulty</string>
    <string name="text_usd">USD</string>
    <string name="text_minerstatus">MinerStatus</string>
    <string name="text_username">username</string>
    <string name="text_hashrate24h">Hashrate24H</string>
    <string name="text_validshares">ValidShares</string>
    <string name="text_staleshares">StaleShares</string>
    <string name="text_invalidshares">InvalidShares</string>
    <string name="message_save_success">"settings saved"</string>
    <string name="message_save_failed">"save failed"</string>
    <string name="message_load_settings_failed">"load settings failed"</string>
</resources>