<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="144dp">

        <TextView
            android:id="@+id/title_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_setting_fragment"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/labelAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelServer" />

        <EditText
            android:id="@+id/editTextServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:text="@string/default_serverAddress" />

        <TextView
            android:id="@+id/labelCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelCurrency" />

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/labelMiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelMiner" />

        <EditText
            android:id="@+id/editTextMiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintMiner"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>